added project_adding handling function to save project in a modularized and reusable way.

--- a/projects.json
+++ b/projects.json
@@ -12,5 +12,33 @@
         "status": "Not started",
         "start_date": "07/09/2025",
         "deadline": "October 02, 2025"
+    },
+    {
+        "client_name": "Test",
+        "project": "App development",
+        "status": "Not-Started",
+        "start_date": "25/10/2025",
+        "deadline": "12/12/2025"
+    },
+    {
+        "client_name": "new",
+        "project": "ML ",
+        "status": "Not-Started",
+        "start_date": "25/10/2025",
+        "deadline": "12/12/2025"
+    },
+    {
+        "client_name": "Bob",
+        "project": "AI",
+        "status": "Not-Started",
+        "start_date": "25/10/2025",
+        "deadline": "12/02/2025"
+    },
+    {
+        "client_name": "Main Testing",
+        "project": "Software",
+        "status": "Not-Started",
+        "start_date": "25/10/2025",
+        "deadline": "01/01/2026"
     }
 ]
